@@ -1,3 +1,4 @@
 .kdev4
+qtpropertybrowser-2.5_1-opensource/
 build/
 srmg
